# figma-asset-downloader

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md  fad_manifest.toml
.github/workflows/: build.yaml  release.yaml
docs/: _coverpage.md  home.md  index.html
docs/img/: logo.ai  logo.psd
img/: logo.psd
src/: emojis.rs  main.rs  manifest_checker.rs  models.rs
