[package]
name = "figma-asset-downloader"
description = "Small utility to help you download Figma assets directly to your computer."
version = "0.7.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/robertohuertasm/figma-asset-downloader"
readme = "README.md"
keywords = ["cli", "figma", "assets", "images"]
categories = ["network-programming"]

exclude = [".github", ".vscode", ".pre-commit-config.yaml", "docs", "fad_manifest.toml"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "fad"
path = "./src/main.rs"

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core", "fs"] }
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
structopt = "0.3"
toml = "0.5"
console = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.56"
image = { version = "0.23.6", features= ["jpeg", "jpeg_rayon"] }
oxipng = "3.0.0"
async-trait = "0.1.36"
anyhow = "1.0"
scan_dir = "0.3.3"
