[package]
name = "figma-asset-downloader"
description = "Small utility to help you download Figma assets directly to your computer."
version = "0.8.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/robertohuertasm/figma-asset-downloader"
readme = "README.md"
keywords = ["cli", "figma", "assets", "images"]
categories = ["network-programming"]

exclude = [".github", ".vscode", ".pre-commit-config.yaml", "docs", "fad_manifest.toml"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "fad"
path = "./src/main.rs"

[dependencies]
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "fs"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3"
toml = "0.5"
console = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.58"
image = { version = "0.23.10", features= ["jpeg", "jpeg_rayon"] }
oxipng = "5.0.1"
async-trait = "0.1.41"
anyhow = "1.0"
scan_dir = "0.3.3"
